--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn -f Meetingplanner/pom.xml clean install
+        run: mvn -f Meeting-planner/Meetingplanner/pom.xml clean install
 
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@v1
