--- a/MeetingPlanner/pom.xml
+++ b/MeetingPlanner/pom.xml
@@ -4,17 +4,20 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <!-- Project metadata -->
   <groupId>com.example</groupId>
   <artifactId>meeting-planner</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <!-- Java compiler version -->
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
+  <!-- Dependencies -->
   <dependencies>
-    <!-- Жишээ dependency -->
+    <!-- Unit testing library -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -22,4 +25,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <!-- Build configuration (optional) -->
+  <build>
+    <plugins>
+      <!-- Compiler plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
